--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
 	<title>Add nonsense</title>
 </head>
 
 <body>
-	<!-- <div id="page-container"> -->
 	<input id="mode-switch" type="checkbox">
 
 	<div id="sun-moon">
@@ -45,8 +47,7 @@
 		</label>
 	</div>
 
-
-	<!-- <iframe class="iframe-bg" src="file:///Users/jesse/Dropbox/webDevMinor/CSS-to-the-rescue/iframes/bg.html" frameborder="0" allowfullscreen></iframe> -->
+	<button class="fa fa-eye" id="hide-content"></button>
 
 	<main class="layout l-article">
 		<div class="l-article-section">
@@ -210,7 +211,6 @@
 		</section>
 	</main>
 
-	<!-- </div> -->
 	<div id="bg">
 		<svg class="bg-city-skyline-fallback" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 505.26 127.51">
 			<path d="M118.29,31h-3.64V23.53l-12.45-6.7-12.45,6.7V31H86.1V53.11H81.79V58H55.6l-3.17-4.13H38.87V21.51l-5.28-7.35H5.91V31.32L0,37.24v90.27H505.26V85.35h-29V67.23H449.57V55.82H402.9V68.59l-5.77-2.25V54.54h-3V48.89l-8.81-4.3V30.07L367,38.78V50.72h-2.21V46.2h-4V39.91l-13.73-5.66-13.72,5.66v3.77l-.66-1h-13V16.28H287.87l-6.08,7.22v5.63H271.48V58H266V41.77h-4.19V16.3h-3.54V7.72L246.16,0,234.07,7.72V16.3h-3.54V41.77h-.77V37.61l-4.48-6.24h-23.5V60.9L200,63.35v2h-4.73v-10h-4.62V33.81h-3.9V26.57l-13.32-6.51-13.33,6.51v7.24h-3.9V55.29h-4.61v5.6h-7.27v8.58H133.75V60.41L126,56.8V30.07l-7.66,3.66Z" />
